# newsnlp

./: .gitignore  LICENSE.txt  README.md  meta.yaml  pyproject.toml  setup.cfg
demo/: sum.py  tfidf.py
doc/: text-generation.md
src/: main.py  metrics.py  requirements.txt
src/arise_newsnlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/newsnlp/: __init__.py  base.py  categorizer.py  classifier.py  globals.py  summarizer.py  translator.py
src/newsnlp/ad/: __init__.py  ad.py  constants.py  data_loader.py  dataset.py
src/newsnlp/ad/models/: ad_detector.py
src/newsnlp/estimators/: __init__.py  category_selector.py  ordinal_encoder.py
src/newsnlp/seq2seq/: base.py  lstm.py  seq2seq.py
src/newsnlp/seq2seq/optimizers/: adagrad.py
src/newsnlp/skip_gram/: data_loader.py  model.py
src/newsnlp/test/: grad.py
src/newsnlp/test/data/: le_loup_et_le_chien.txt
src/newsnlp/tf_idf/: tfidfvectorizer.py
src/newsnlp/utils/: eval.py  helpers.py  imagesize.py  ngram.py  token_prep.py  vocab.py
src/newsnlp/vect/: __init__.py  tfidf.py
tests/: test_ad.py  test_ad_detector.py  test_data_loader.py  test_dataset.py  test_ngrams.py
