name = "newsnlp"
version = "0.1.0"
description = "News NLP library"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["news", "nlp", "summarization", "multilangual"]
authors = [
    {email = "ceduth@techoutlooks.com"},
    {name = "EC"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 1 - Beta",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]


[project]
name = "newsnlp"
version = "0.0.2"
dependencies = [
    "Cython",
    "autograd",
    "spacy",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl",
    "fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.5.0/fr_core_news_sm-3.5.0-py3-none-any.whl",
    "pytextrank",   # TextRank as a spaCy pipeline extension

    # BARThez deps
    "sentencepiece",
    "transformers[torch]",
    "sacremoses",
    "pandas", # "pandas ~=2.0.3",
    "scikit-learn",
    "skorch",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "bs4", "lxml", "playwright"
]


[project.urls]
homepage = "https://github.com/techoutlooks/newsnlp"
repository = "https://github.com/techoutlooks/newsnlp"
documentation = "https://github.com/techoutlooks/newsnlp/tree/main/README.md"
changelog = "https://github.com/techoutlooks/newsnlp/tree/main/CHANGELOG.md"