[metadata]
name = newsnlp
version = 0.0.1
description = News NLP library
long_description = file: README.md
url = https://github.com/techoutlooks/newsnlp.git
author = EC
author_email = ceduth@techoutlooks.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =
    Cython==0.29.23
;    numpy==1.20.2
    autograd==1.3
    spacy==3.0.6
;    https://newbedev.com/how-to-write-setup-py-to-include-a-git-repository-as-a-dependency
    fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.0.0/fr_core_news_sm-3.0.0.tar.gz#egg=fr_core_news_sm

    # BARThez deps
    sentencepiece
    transformers[torch]
    sacremoses

[options.packages.find]
where = src
